--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,9 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1",
+    "stream-display": "^1.0.0",
     "styled-components": "^4.4.1"
   },
   "scripts": {
