--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "recordrtc": "^5.5.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
     "stream-display": "^1.0.0",
